# hpp-exec

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  package.xml  pyproject.toml  run.sh
doc/: Doxyfile.extra.in
docker/: Makefile  config.sh
docs/: API.md  ARCHITECTURE.md
examples/: README.md  fer_example.py  fr3_example.py  gripper_controllers.py  hpp_planning_gazebo.py  manipulation_example.py  mock_controller.py  pick_and_place_franka.py  pick_and_place_franka_timed.py  pick_and_place_gazebo.py  pick_and_place_planning.py  simple_trajectory.py  ur5_example.py
hpp_exec/: __init__.py  gripper.py  ros2_sender.py  segments.py  trajectory_utils.py
hpp_planner/: __init__.py  gripper.py  ros2_sender.py  trajectory_utils.py
include/hpp-exec/: doc.hh
robots/cube/: cube.srdf  cube.urdf
robots/fer/: fer.srdf  fer.urdf
robots/fr3/: fr3.srdf  fr3.urdf  fr3_manipulation.srdf
scripts/: README.md  check_two_grasps_disambiguation.py  controllers_gripper.yaml  launch_gazebo_gripper.sh  test_gripper_gazebo.py
tests/: test_segments.py
tutorial/: README.md  example_api_usage.py  tutorial_gazebo.py  tutorial_hpp_gazebo.py  tutorial_manipulation.py  tutorial_manipulation_gazebo.py  tutorial_mock.py
